[tool.poetry]
name = "PyTestArch"
version = "2.0.1"
description = "Test framework for software architecture based on imports between modules"
authors = ["zyskarch <zyskarch@gmail.com>"]
maintainers = ["zyskarch <zyskarch@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://zyskarch.github.io/pytestarch/"
repository = "https://github.com/zyskarch/pytestarch"

keywords = ["architecture", "test"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zyskarch/pytestarch/issues"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.0"
matplotlib = { version = "^3.5.3", optional = true }
mkdocs-autorefs = "0.4.1"
mkdocs-material-extensions = "1.3.1"
mkdocstrings = "0.21.2"
griffe = "0.26.0"

[tool.poetry.extras]
visualization = ["matplotlib"]

[tool.poetry.dev-dependencies]
mkdocs = "1.4.2"
mkdocstrings-python = "0.9.0"
mkdocs-material = "9.1.6"
nox = "2022.8.7"
pre-commit = "2.20.0"
pytest = "^7.1.2"
coverage = "^7.0.5"
mike = "1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
sourcepath = "src"

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.bandit]
[tool.bandit.assert_used]
skips = ["*/test_*.py"]