[tool.poetry]
name = "PyTestArch"
version = "3.0.1"
description = "Test framework for software architecture based on imports between modules"
authors = ["zyskarch <zyskarch@gmail.com>"]
maintainers = ["zyskarch <zyskarch@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://zyskarch.github.io/pytestarch/"
repository = "https://github.com/zyskarch/pytestarch"

keywords = ["architecture", "test"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zyskarch/pytestarch/issues"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2"
matplotlib = { version = "^3.9", optional = true }

[tool.poetry.extras]
visualization = ["matplotlib"]

[tool.poetry.dev-dependencies]
mkdocs = "1.6.0"
mkdocstrings-python = "1.10.3"
mkdocs-material = "9.5.25"
mkdocs-autorefs = "1.0.1"
mkdocs-material-extensions = "1.3.1"
mkdocstrings = "0.25.1"
griffe = "0.45.2"
nox = "2024.4.15"
pre-commit = "3.7.1"
pytest = "^8.2.1"
coverage = "^7.5.2"
mike = "2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
sourcepath = "src"

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.bandit]
[tool.bandit.assert_used]
skips = ["*/test_*.py"]